[package]
name = "epp"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "ast" }
lexer = { path = "lexer" }
parser = { path = "parser" }
diagnostic = { path = "diagnostic", features = ["global_instance"] }
evaluator = { path = "evaluator" }
validator = { path = "validator", features = ["global_instance"] }
lazy_static = "1.4.0"

[lib]
crate-type = ["dylib"]
