[package]
name = "epp"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "ast" }
lexer = { path = "lexer" }
parser = { path = "parser" }
diagnostic = { path = "diagnostic", features = ["global_instance"] }
evaluator = { path = "evaluator" }
validator = { path = "validator", features = ["global_instance"] }
transpiler = { path = "transpiler", features = ["global_instance"] }
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib", "rlib"]