[package]
name = "diagnostic"
version = "0.0.1"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
parking_lot = { version = "0.12", optional = true }

[features]
global_instance = ["lazy_static", "parking_lot"]
